--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <section>
              
                 <p> 
-                  <img src="/workspace/web-development-starter-code/image/images (61).jpeg" >
+                  <img src="images (61).jpeg" >
 
                   <span>Brady</span>
                   <br>
@@ -232,7 +232,7 @@
                 </p>
               
                 <p>
-                  <img src="/workspace/web-development-starter-code/image/Mckenzie.webp" >
+                  <img src="image/Mckenzie.webp" >
 
                   <span>McKenzie</span>
                   <br>
@@ -240,7 +240,7 @@
                 </p>
 
                 <p>
-                  <img src="/workspace/web-development-starter-code/image/Tanner.webp" >
+                  <img src="image/Tanner.webp" >
 
                   <span>Tanner</span>
                   <br>
@@ -249,7 +249,7 @@
                 </p>
 
                 <p>
-                  <img src="/workspace/web-development-starter-code/image/Lela.webp" >
+                  <img src="image/Lela.webp" >
 
                   <span>Lela</span>
                   <br>
