--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <section>
              
                 <p> 
-                  <img src="images (61).jpeg" >
+                  <img src="brad.jpeg" >
 
                   <span>Brady</span>
                   <br>
