--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <section>
              
                 <p> 
-                  <img src="brad.jpeg" >
+                  <img src="image/images (61).jpg" >
 
                   <span>Brady</span>
                   <br>
@@ -233,7 +233,7 @@
               
                 <p>
                   <img src="image/Mckenzie.webp" >
-
+                    <br>
                   <span>McKenzie</span>
                   <br>
                   A believer in gender equality, enjoys surfing, a shy personality, and in a relationship with Brady.
@@ -241,7 +241,7 @@
 
                 <p>
                   <img src="image/Tanner.webp" >
-
+<br>
                   <span>Tanner</span>
                   <br>
                   Super chill, came up with amazing ideas nearing the end of the movie, good at guitar, and co-leader of both crews. 
@@ -250,7 +250,7 @@
 
                 <p>
                   <img src="image/Lela.webp" >
-
+<br>
                   <span>Lela</span>
                   <br>
                   Enjoys more traditional gender roles, not the brightest, and constantly changes her mind on her love interest.
