--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           
           <div id="content">
             <h2>Summary</h2>
-            <p>Mackenzie and Brady get transported to a 1960s movie after a horrible storm struck. They began making new friends and even love interests. After being integrated into the male and female groups, they learn new life lessons and even play cupid for the main characters of the 1960’s movie. They later find out two scientists have a machine that’s able to create a huge storm that’ll possibly transport them back, so they take that chance. Ending in Mackenzie staying with Brady and living her surf life. Surf’s up!
+            <p>Mackenzie and Brady get transported to a 1960s movie called "Wet Side Story" after a horrible storm struck. They began making new friends and even love interests. After being integrated into the male and female groups, they learn new life lessons and even play cupid for the main characters of the movie. They later find out two scientists have a machine that’s able to create a huge storm that’ll possibly transport them back, so they take that chance. Ending in Mackenzie staying with Brady and living her surf life. Surf’s up!
             </p>
            
             <h2>Characters!</h2>
